<resources>
    <string name="app_name"></string>
    <string name="facebook_app_id">2292976464268009</string>
    <string name="fb_login_protocol_scheme">fb2292976464268009</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="kv">Món khai vị</string>
    <string name="mc">Món chính</string>
    <string name="mtm">Món tráng miệng</string>
    <string name="ms">Món sup</string>
    <string name="nu">Đồ uống</string>


</resources>
